--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,119 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  text-align:center;
+  font-size:1em;
 }
+
+h1{
+  font-size:1.2em;
+  padding:20px 0;
+  border-bottom: 1px solid #eee;
+  margin: 0 0 30px 0;
+  color: #333;
+}
+
+/* grid */
+.row{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.row > div {
+  display:block;
+  width:100px;
+  height:100px;
+  border: 1px solid #bbb;
+  margin: 4px;
+  text-align:center;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.97em;
+  display:grid;
+  align-content:center;
+}
+
+
+.row > div.green {
+  background:#5ac85a;
+  border-color: #5ac85a;
+  opacity:0;
+  animation: flip 1s ease forwards;
+}
+
+.row > div.red  {
+  background:rgb(224, 60, 60);
+  border-color: rgb(224,60,60);
+  opacity:0;
+  animation: flip 1s ease forwards;
+}
+
+.row > div.yellow{
+  background: #e2cc68;
+  border-color: #e2cc68;
+  opacity:0;
+  animation: flip 1s ease forwards;
+}
+
+.row > div:nth-child(2){
+  animation-delay: 0.2s;
+}
+
+.row > div:nth-child(3){
+  animation-delay: 0.4s;
+}
+
+.row > div:nth-child(4){
+  animation-delay: 0.6s;
+}
+
+.row > div:nth-child(5){
+  animation-delay: 0.8s;
+}
+
+
+.row > span.green{
+  background:#5ac85a;
+  border-color: #5ac85a;
+}
+
+/* animations */
+@keyframes flip {
+ 0%{
+  transform: rotateY(0);
+  opacity:0;
+ }
+ 45%{
+  transform: rotateY(90deg);
+  opacity:0.5;
+ }
+ 55%{
+  transform: rotateY(90deg);
+  opacity:0.5;
+ }
+
+ 100% {
+  transform: rotateY(0);
+  opacity:1;
+ }
+}
+@keyframes fadein {
+  0%{
+   opacity:0;
+  }
+  45%{
+   opacity:0.5;
+  }
+  55%{
+   opacity:0.5;
+  }
+ 
+  100% {
+   opacity:1;
+  }
+ }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
